fixed href text not wrapping to next line

--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -177,3 +177,7 @@ tr:hover {
     width: 200px;
 }
 
+a {
+    word-wrap:break-word;
+}
+
